Added a few descriptions

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,23 +1,23 @@
-// Jump & Crouch
+// Jump & Crouch - Easier to jump on boxes, and makes your profile smaller when jumping
 alias +jumpcrouch          "+duck; +jump"
 alias -jumpcrouch          "-duck; -jump"
 
-// Quick Switch
+// Quick Switch - Switch to the knife and back to previous weapon
 alias +knife               "slot3"
 alias -knife               "lastinv"
 
-//Pistol Viewmodel
+//Pistol Viewmodel - This view model looks better when using pistols
 //alias pistol_viewmodel   "viewmodel_offset_x -2.0; viewmodel_offset_y 2.0; viewmodel_offset_z -2.0"
 
-// Jump Throw
+// Jump Throw - Makes jump-throw nades more consistent
 alias +jumpthrow           "+jump; -attack"
 alias -jumpthrow           "-jump"
 
-// Switch Hands
+// Switch Hands - Switch what hand your weapon is in
 alias right_hand           "cl_righthand 1; bind F1 left_hand"
 alias left_hand            "cl_righthand 0; bind F1 right_hand"
 
-// Game Instructors
+// Game Instructors - Makes it easier to find the bomb
 alias instructions_on      "gameinstructor_enable 1; bind F2 instructions_off"
 alias instructions_off     "gameinstructor_enable 0; bind F2 instructions_on"
 
@@ -110,7 +110,7 @@ cl_color "1"
 hud_scaling "0.75"
 cl_loadout_colorweaponnames "1"
 
-// View Model - default viewmodel settings
+// View Model
 cl_righthand "1"
 cl_bob_lower_amt "0.000000"
 cl_bobamt_lat "0.000000"
@@ -124,7 +124,7 @@ viewmodel_offset_x "-0.1"
 viewmodel_offset_y "-2.0"
 viewmodel_offset_z "-2.0"
 
-// Console Highlighting
+// Console Highlighting - Highlights damage taken/given in dev console
 con_filter_enable "2"
 con_filter_text " - "
 
