--- a/mrjawapa.cfg
+++ b/mrjawapa.cfg
@@ -9,7 +9,7 @@ bind 4               "use weapon_c4"
 bind 5               "use weapon_taser"
 
 bind a               "+moveleft"
-bind b               " "
+bind b               "buymenu"
 bind c               "use weapon_incgrenade; use weapon_molotov"
 bind d               "+moveright"
 bind e               "use weapon_smokegrenade"
@@ -20,7 +20,7 @@ bind i               "show_loudout_toggle"
 bind j               "radio1"
 bind k               "radio2"
 bind l               "radio3"
-bind m               " "
+bind m               "teammenu"
 bind n               " "
 bind o               "messagemode"
 bind p               "messagemode2"
@@ -55,9 +55,7 @@ bind MWHEELDOWN      "slot2"
 
 bind F1              "left_hand"
 bind F2              "instructions_on"
-bind F3              "buymenu"
 bind F4              "autobuy"
-bind F5              "teammenu"
 bind F11             "kill"
 
 echo "Binds loaded!"
