--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,25 +1,29 @@
-// Jump & Crouch - Easier to jump on boxes, and makes your profile smaller when jumping
+// Jump & Crouch - Easier to jump on boxes and gives you a smaller profile when jumping
 alias +jumpcrouch          "+duck; +jump"
 alias -jumpcrouch          "-duck; -jump"
 
-// Quick Switch - Switch to the knife and back to previous weapon
+// Quick Switch - Switch to your knife and back to last weapon
 alias +knife               "slot3"
 alias -knife               "lastinv"
 
-//Pistol Viewmodel - This view model looks better when using pistols
+//Pistol Viewmodel - This is a viewmodel that looks better with pistols
 //alias pistol_viewmodel   "viewmodel_offset_x -2.0; viewmodel_offset_y 2.0; viewmodel_offset_z -2.0"
 
-// Jump Throw - Makes jump-throw nades more consistent
+// Jump Throw - Used on jump-throw grenades, making them more consistent
 alias +jumpthrow           "+jump; -attack"
 alias -jumpthrow           "-jump"
 
-// Switch Hands - Switch what hand your weapon is in
+// Switch Hands - Switch the hand your weapon is in
 alias right_hand           "cl_righthand 1; bind F1 left_hand"
 alias left_hand            "cl_righthand 0; bind F1 right_hand"
 
 // Game Instructors - Makes it easier to find the bomb
 alias instructions_on      "gameinstructor_enable 1; bind F2 instructions_off"
 alias instructions_off     "gameinstructor_enable 0; bind F2 instructions_on"
+
+// Voice Toggle - Toggle voice chat on and off
+alias voice_on             "voice_enable 1; bind x voice_off"
+alias voice_off            "voice_enable 0; bind x voice_on"
 
 // Crosshair
 cl_crosshair_drawoutline "0"
@@ -63,7 +67,6 @@ fps_max_menu "61"
 zoom_sensitivity_ratio_mouse "0.76"
 closeonbuy "0"
 r_drawtracers_firstperson "0"
-cl_show_clan_in_death_notice "0"
 rate "128000"
 cl_updaterate "128"
 cl_cmdrate "128"
@@ -109,6 +112,7 @@ cl_teammate_colors_show "1"
 cl_color "1"
 hud_scaling "0.75"
 cl_loadout_colorweaponnames "1"
+cl_show_clan_in_death_notice "0"
 
 // View Model
 cl_righthand "1"
