--- a/mrjawapa.cfg
+++ b/mrjawapa.cfg
@@ -55,7 +55,8 @@ bind MWHEELDOWN      "slot2"
 
 bind F1              "left_hand"
 bind F2              "instructions_on"
-bind F4              "autobuy"
+bind F3              "autobuy"
+bind F4              "voice_off"
 bind F11             "kill"
 
 echo "Binds loaded!"
