--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -17,6 +17,10 @@ alias -jumpthrow           "-jump"
 alias right_hand           "cl_righthand 1; bind F1 left_hand"
 alias left_hand            "cl_righthand 0; bind F1 right_hand"
 
+// Toggle FPS - Toggle FPS counter
+alias fps_on               "cl_showfps 1; bind F10 fps_off"
+alias fps_off              "cl_showfps 0; bind F10 fps_on"
+
 // Game Instructors - Makes it easier to find the bomb
 alias instructions_on      "gameinstructor_enable 1; bind F2 instructions_off"
 alias instructions_off     "gameinstructor_enable 0; bind F2 instructions_on"
@@ -24,6 +28,10 @@ alias instructions_off     "gameinstructor_enable 0; bind F2 instructions_on"
 // Voice Toggle - Toggle voice chat on and off
 alias voice_on             "voice_enable 1; bind x voice_off"
 alias voice_off            "voice_enable 0; bind x voice_on"
+
+// Mute - Toggle mute
+alias mute                 "volume 0; bind F10 unmute"
+alias unmute               "volume 1.5; bind F10 mute"
 
 // Crosshair
 cl_crosshair_drawoutline "0"
@@ -33,18 +41,18 @@ cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
 cl_crosshair_outlinethickness "1"
 cl_crosshair_sniper_width "1"
-cl_crosshairalpha "255"
-cl_crosshaircolor "5"
-cl_crosshaircolor_b "51"
-cl_crosshaircolor_g "51"
-cl_crosshaircolor_r "230"
+cl_crosshairalpha "255'"
+cl_crosshaircolor "0"
+cl_crosshaircolor_b "0"
+cl_crosshaircolor_g "0"
+cl_crosshaircolor_r "0"
 cl_crosshairdot "0"
-cl_crosshairgap "-1"
+cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "0"
-cl_crosshairsize "3"
+cl_crosshairscale "600"
+cl_crosshairsize "2.500000"
 cl_crosshairstyle "4"
-cl_crosshairthickness "1.25"
+cl_crosshairthickness "1.000000"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "-4.5"
 
@@ -59,19 +67,14 @@ m_customaccel "0"
 // Other Preferences
 cl_autowepswitch "0"
 cl_disablefreezecam "1"
-cl_showloadout "0"
+cl_showloadout "1"
 cl_showfps "0"
 cl_use_opens_buy_menu "1"
-fps_max "120"
-fps_max_menu "61"
 zoom_sensitivity_ratio_mouse "0.76"
 closeonbuy "0"
 r_drawtracers_firstperson "0"
-rate "128000"
-cl_updaterate "128"
-cl_cmdrate "128"
 cl_interp_ratio "1"
-cl_interp "0"
+cl_interp "1"
 option_duck_method "0"
 option_speed_method "0"
 cl_autohelp "0"
@@ -87,8 +90,8 @@ snd_headphone_pan_exponent "2"
 snd_headphone_pan_radial_weight "2"
 snd_front_headphone_position "45"
 snd_rear_headphone_position "135"
-snd_setmixer PlayerFootsteps vol "0.7"
-snd_setmixer GlobalFootsteps vol "1.3"
+snd_setmixer PlayerFootsteps vol "0.6"
+snd_setmixer GlobalFootsteps vol "1.5"
 snd_setmixer Ambient vol "0"
 snd_pitchquality "1"
 snd_legacy_surround "0"
@@ -106,8 +109,8 @@ cl_hud_color "3"
 cl_hud_healthammo_style "1"
 cl_hud_radar_scale "1.15"
 cl_radar_rotate "1"
-cl_radar_scale "0.3"
-cl_radar_always_centered "0"
+cl_radar_scale "0.6"
+cl_radar_always_centered "1"
 cl_teammate_colors_show "1"
 cl_color "1"
 hud_scaling "0.75"
