--- a/mrjawapa.cfg
+++ b/mrjawapa.cfg
@@ -14,8 +14,8 @@ bind c               "use weapon_incgrenade; use weapon_molotov"
 bind d               "+moveright"
 bind e               "use weapon_smokegrenade"
 bind f               "use weapon_hegrenade"
-bind g               "+lookatweapon"
-bind h               " "
+bind g               "+jumpthrow"
+bind h               "+lookatweapon"
 bind i               "show_loudout_toggle"
 bind j               "radio1"
 bind k               "radio2"
@@ -31,12 +31,12 @@ bind t               "drop"
 bind u               " "
 bind v               "use weapon_decoy"
 bind w               "+forward"
-bind x               " "
+bind x               "+knife"
 bind y               "use weapon_c4; drop; lastinv"
-bind z               "+voicerecord"
+bind z               " "
 
-bind CTRL            "+jumpthrow"
-bind ALT             "+jump"
+bind ALT             "+jump" // So I can switch players while spectating
+bind CTRL            "+voicerecord"
 bind TAB             "+showscores"
 bind CAPSLOCK        "+speed"
 bind SHIFT           "+duck"
@@ -47,16 +47,18 @@ bind PAUSE           "pause"
 
 bind MOUSE1          "+attack"
 bind MOUSE2          "+attack2"
-bind MOUSE3          "+knife"
+bind MOUSE3          " "
 bind MOUSE4          "use weapon_knife"
-bind MOUSE5          "+reload; r_cleardecals"
+bind MOUSE5          "+reload; r_cleardecals" // Remove blood stains when reloading
 bind MWHEELUP        "slot1"
 bind MWHEELDOWN      "slot2"
 
-bind F1              "left_hand"
-bind F2              "instructions_on"
-bind F3              "autobuy"
-bind F4              "voice_off"
+bind F1              "+showscores"
+bind F2              "left_hand"
+bind F3              "instructions_on"
+bind F4              "autobuy"
+bind F9              "voice_off"
+bind F10             "fps_on"
 bind F11             "kill"
 
 echo "Binds loaded!"
